--- a/Work.WebProj/Web.config
+++ b/Work.WebProj/Web.config
@@ -2,9 +2,8 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><sectionGroup name="jsEngineSwitcher">
-			<section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
-		<section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" /></sectionGroup></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <!--此項目主要提供給Code First方式使用-->
     <add name="IdentityDB" connectionString="data source=192.168.0.241;initial catalog=C38A0_ChengShen;user id=sa;password=jcin@4257386~;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
@@ -38,18 +37,11 @@
     <!--************信件收發************-->
   </appSettings>
   <system.web>
-    <httpHandlers>
-      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
-    </httpHandlers>
     <customErrors mode="Off" />
     <httpCookies httpOnlyCookies="true" requireSSL="false" />
     <compilation debug="true" targetFramework="4.5.1">
-      <buildProviders>
-        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-      </buildProviders>
+
       <assemblies>
-        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
-        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
     </compilation>
@@ -60,11 +52,13 @@
         <add namespace="MvcSiteMapProvider.Web.Html.Models" />
       </namespaces>
     </pages>
-  <!-- Uncomment if using IIS 7 Classic Mode, IIS 6, or Mono --><!--
+    <!-- Uncomment if using IIS 7 Classic Mode, IIS 6, or Mono -->
+    <!--
 		<httpHandlers>
 			<add verb="GET" path="*.jsx" type="React.Web.JsxHandlerFactory, React.Web" />
 		</httpHandlers>
-		--></system.web>
+		-->
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -135,14 +129,6 @@
         <assemblyIdentity name="Microsoft.AspNet.SignalR.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.2.0" newVersion="2.1.2.0" />
       </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="MsieJavaScriptEngine" publicKeyToken="a3a2846a37ac0d3e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.1.0" newVersion="1.5.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="JavaScriptEngineSwitcher.Msie" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.2.0" newVersion="1.2.2.0" />
-      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -164,16 +150,11 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-    <remove name="ReactJsx" /><add name="ReactJsx" verb="GET" path="*.jsx" type="React.Web.JsxHandlerFactory, React.Web" preCondition="integratedMode" /></handlers>
+    </handlers>
     <modules>
       <remove name="UrlRoutingModule-4.0" />
       <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
-<jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd"><core>
-			<engines>
-				<add name="JintJsEngine" type="JavaScriptEngineSwitcher.Jint.JintJsEngine, JavaScriptEngineSwitcher.Jint" />
-			<add name="MsieJsEngine" type="JavaScriptEngineSwitcher.Msie.MsieJsEngine, JavaScriptEngineSwitcher.Msie" /></engines>
-		</core></jsEngineSwitcher></configuration>
+</configuration>
