--- a/Work.WebProj/Work.WebProj.ChengShen.csproj
+++ b/Work.WebProj/Work.WebProj.ChengShen.csproj
@@ -53,7 +53,7 @@
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="CKFinder">
-      <HintPath>..\Core.Dll\CKFinder.dll</HintPath>
+      <HintPath>Scripts\ckfinder\bin\Release\CKFinder.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
